# Tangles

./: .gitignore  Cargo.toml  README.md
assets/: style.css  tangles.desktop
src/: database.rs  lib.rs  main.rs  note_window.rs  pickers.rs  rich_editor.rs  tangle_map.rs  test_core.rs  theme.rs
