[package]
name = "tangles"
version = "0.1.0"
edition = "2021"

[dependencies]
gtk4 = { version = "0.10", features = ["v4_10"] }
gdk4 = "0.10"
glib = "0.20"
gio = "0.20"
kamadak-exif = "0.5"
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
anyhow = "1.0"
thiserror = "1.0"
once_cell = "1.19"
regex = "1.10"
html5ever = "0.29"
markup5ever = "0.14"
tendril = "0.4"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = false
debug = 1